# httptrace

./: AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  libhttptrace_hook.dylib  libntrace_hook.dylib  test_http.py
src/: hook.c  http_parser.rs  main.rs
src/capture/: interface_detection.rs  mod.rs  pcap.rs
