[package]
name = "httptrace"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
httparse = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
pcap = "2.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"

[build-dependencies]
cc = "1.0"
